[package]
name = "diesel-async-dirty-conn-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
deadpool = { version = "0.12.1", features = ["rt_tokio_1"] }
diesel = "2.2.4"
diesel-async = { version = "0.5.1", features = ["deadpool", "postgres", "tokio"] }
tokio = { version = "1.0.0", features = ["macros"] }
futures = "0.3.31"
env_logger = "0.11.5"
